<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/light_violet"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="left"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_marginTop="70dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:layout_gravity="fill_vertical"
        >
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="16dp">
                <TextView
                    android:id="@+id/mobile"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/light_violet"
                    android:text="@string/mobile"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:onClick="onGenerateQrClick"/>
                <TextView
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/mail"
                    android:text="@string/email"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/whatsApp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/whatsApp"
                    android:text="@string/whatsApp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/instagram"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/instagram"
                    android:text="@string/instagram"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>
    </ScrollView>
    </FrameLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/cadmium_violet"
        android:layout_gravity="bottom"
        tools:context=".YourActivity">
        <!-- Left FloatingActionButton -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="66dp"
            android:backgroundTint="@color/cadmium_violet"
            android:contentDescription="@string/app_name"
            android:src="@drawable/qrcode_scan"
            android:tint="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <!-- Right FloatingActionButton -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="66dp"
            android:backgroundTint="@color/chalk_white"
            android:contentDescription="@string/app_name"
            android:src="@drawable/baseline_menu_24"
            android:tint="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>